--- a/scss/style.scss
+++ b/scss/style.scss
@@ -44,6 +44,7 @@ body {
 		width: 100%;
 	}
 }
+
 a {
 	transition: .3s all ease;
 	color: $primary;
@@ -1986,3 +1987,13 @@ textarea.form-control {
     stroke-dashoffset: -136px;
   }
 }
+
+.portfolio-item img {
+	width: 90%; /* Set image width to 90% of the screen width */
+	height: auto; /* Keep the aspect ratio */
+	max-height: 70vh; /* Set max height to 70% of the viewport height */
+	object-fit: contain; /* Ensure the image fits nicely within the box */
+	display: block; /* Ensure the image doesn't have inline spacing */
+	margin: 0 auto; /* Center the image horizontally */
+  }
+  
